--- a/index.html
+++ b/index.html
@@ -36,29 +36,45 @@
                         <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
                         <p>En plein centre ville ou en pleine nature</p>
                     </div>
-                    <div class="search">
-                            <div class="iconMap searchBar"><i class="fa-solid fa-location-dot"></i></div>
-                            <div class="searchMap searchBar"><input type="search" value="Marseille, France"/></div>
-                            <div class="buttonSearch searchBar"><i class="fa-solid fa-magnifying-glass iconHidden"></i><span class="textHidden">Rechercher</span></div>
-                    </div>
-                    <div class="filters alignFilters">
+                    <form>
+                        <div class="search">
+                                <div class="iconMap searchBar">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                </div>
+                                <div class="searchMap searchBar">
+                                    <input type="search" value="Marseille, France"/>
+                                </div>
+                                <div class="buttonSearch searchBar">
+                                    <i class="fa-solid fa-magnifying-glass iconHidden"></i>
+                                    <span class="textHidden">Rechercher</span>
+                                </div>
+                        </div>
+                    </form>
+                    <div class="filters">
+                        
                         <h2>Filtres</h2>
-                            <div class="economic alignFilters buttonFilters">
-                                <i class="fa-solid fa-money-bill-wave blueIcons "></i>
-                                <p class="textFilters">Économique</p>
-                            </div>
-                            <div class="family alignFilters buttonFilters">  
-                                <i class="fa-solid fa-child blueIcons"></i>
-                                <p class="textFilters">Familial</p>
-                            </div>
-                            <div class="romantic alignFilters buttonFilters">
-                                <i class="fa-solid fa-heart blueIcons"></i>
-                                <p class="textFilters">Romantique</p>
-                            </div>
-                            <div class="animals alignFilters buttonFilters">
-                                <i class="fa-solid fa-dog blueIcons"></i>
-                                <p class="textFilters">Animaux Autorisés</p>
-                            </div>
+                            <ul class="filtersZone""">
+                                <li class="filtersButton">
+                                    <i class="fa-solid fa-money-bill-wave filtersIcons"></i>
+                                    <a href="#" alt="trier par budget" class="linkSurvol filtersLink" class="filtersLink">Économique</a>
+                                </li>
+
+                                <li class="filtersButton">
+                                    <i class="fa-solid fa-child filtersIcons"></i>
+                                    <a href="#" alt="trier par capacité" class="filtersLink">Familial</a>
+                                </li>
+
+                                <li class="filtersButton">
+                                    <i class="fa-solid fa-heart filtersIcons"></i>
+                                    <a href="#" alt="trier pour les couples" class="filtersLink">Romantique</a>
+                                </li>
+
+                                <li class="filtersButton">
+                                    <i class="fa-solid fa-dog filtersIcons"></i>
+                                    <a href="#" alt="trier selon acceptation d'animaux de compagnies" class="filtersLink">Animaux Autorisés</a>
+                                </li>
+                            </ul>
+                    
                     </div>
                     <div>
                         <p><i class="fa-solid fa-info BlueInfobulle buttonInfoBulle"></i> Plus de 500 logements sont disponibles dans cette ville</p>
@@ -141,7 +157,7 @@
                             </div>
                         </div>
                     </div>
-                <h3>Afficher plus</h3>
+                    <a href="#hebergements" alt="Découvrez plus d'hébergements" class="fontBold paddingTittle linkSurvol">Afficher plus</a>
                 </div>
                 <div class="popularity">
                     <div class="arrowPosition">
@@ -150,24 +166,28 @@
                     </div>
                         <div class="galerieColumn">
                             <div class="vignettesColumn">
-                                <img src="images/hebergements/3_medium/hotelLeSoleilDuMatin.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
-                                    <div class="descriptionText">
-                                        <h3>Hôtel Le soleil du matin</h3>
-                                        <p class="textVignettes">Nuit à partir de 128€</p>
-                                        <div class="notation">
-                                            <i class="fa-solid fa-star switchBlue"></i>
-                                            <i class="fa-solid fa-star switchBlue"></i>
-                                            <i class="fa-solid fa-star switchBlue"></i>
-                                            <i class="fa-solid fa-star switchBlue"></i>
-                                            <i class="fa-solid fa-star switchBlue"></i>
+                                    <img src="images/hebergements/3_medium/hotelLeSoleilDuMatin.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
+                                        <div class="descriptionText">
+                                            <div>
+                                            <h3>Hôtel Le soleil du matin</h3>
+                                            <p class="textVignettes">Nuit à partir de 128€</p>
+                                            </div>
+                                            <div class="notation">
+                                                <i class="fa-solid fa-star switchBlue"></i>
+                                                <i class="fa-solid fa-star switchBlue"></i>
+                                                <i class="fa-solid fa-star switchBlue"></i>
+                                                <i class="fa-solid fa-star switchBlue"></i>
+                                                <i class="fa-solid fa-star switchBlue"></i>
+                                            </div>
                                         </div>
-                                    </div>
                             </div>
                             <div class="vignettesColumn">
                                 <img src="images/hebergements/3_medium/auCoeurDeLEauChambreHote.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
                                     <div class="descriptionText">
-                                        <h3>Au cœur de l'eau Chambres d'hôtes</h3>
-                                        <p class="textVignettes">Nuit à partir de 71€</p>
+                                        <div>
+                                            <h3>Au cœur de l'eau Chambres d'hôtes</h3>
+                                            <p class="textVignettes">Nuit à partir de 71€</p>
+                                        </div>
                                         <div class="notation">
                                             <i class="fa-solid fa-star switchBlue"></i>
                                             <i class="fa-solid fa-star switchBlue"></i>
@@ -180,8 +200,10 @@
                             <div class="vignettesColumn">
                                 <img src="images/hebergements/3_medium/hotelToutBleuEtBlanc.jpg" alt="Photo d'une chambre de l'Hôtel du port" class="imgVignettesColumn"/>
                                     <div class="descriptionText">
-                                        <h3>Hôtel Tout Bleu et Blanc</h3>
-                                        <p class="textVignettes">Nuit à partir de 68€</p>
+                                        <div>
+                                            <h3>Hôtel Tout Bleu et Blanc</h3>
+                                            <p class="textVignettes">Nuit à partir de 68€</p>
+                                        </div>
                                         <div class="notation">
                                             <i class="fa-solid fa-star switchBlue"></i>
                                             <i class="fa-solid fa-star switchBlue"></i>
@@ -254,23 +276,23 @@
                 <div class="footerElement">
                     <h3 class="footerNoPadding">A propos</h3>
                     <ul class="footerUl">
-                        <li class="footerLi">Fonctionnement du site</li>
-                        <li class="footerLi">Conditions générales de vente</li>
-                        <li class="footerLi">Données et confidentialité</li>
+                        <li class="footerLi"><a href="#" alt="" class="footerLink">Fonctionnement du site</a></li>
+                        <li class="footerLi"><a href="#" alt="" class="footerLink">Conditions générales de vente</a></li>
+                        <li class="footerLi"><a href="#" alt="" class="footerLink">Données et confidentialité</a></li>
                     </ul>
                 </div>
                 <div class="footerElement">
                     <h3 class="footerNoPadding">Nos hébergements</h3>
                     <ul class="footerUl">
-                        <li class="footerLi">Charte qualité</li>
-                        <li class="footerLi">Soumettre votre hôtel</li>
+                        <li class="footerLi"><a href="#" alt="" class="footerLink">Charte qualité</a></li>
+                        <li class="footerLi"><a href="#" alt="" class="footerLink">Soumettre votre hôtel</a></li>
                     </ul>
                 </div>
                 <div class="footerElement">
                     <h3 class="footerNoPadding">Assistance</h3>
                     <ul class="footerUl">
-                        <li class="footerLi">Centre d'aide</li>
-                        <li class="footerLi">Nous contacter</li>
+                        <li class="footerLi"><a href="#" alt="" class="footerLink">Centre d'aide</a></li>
+                        <li class="footerLi"><a href="#" alt="" class="footerLink">Nous contacter</a></li>
                     </ul>
                 </div>
             </div>
